tests/snapshots/test_variables__at_rule_container.snap
---
source: tests/test_variables.rs
expression: stylesheet
---
rules:
  - type: container
    value:
      name: ~
      condition:
        type: feature
        value:
          type: range
          name: width
          operator: greater-than
          value:
            type: length
            value:
              type: value
              value:
                unit: px
                value: 400
      rules:
        - type: style
          value:
            selectors:
              - - type: type
                  name: h2
            declarations:
              importantDeclarations: []
              declarations:
                - property: font-size
                  value:
                    type: length
                    value:
                      type: dimension
                      value:
                        unit: em
                        value: 1.5
              variables: []
            rules: []
            loc:
              source_index: 0
              line: 4
              column: 3
            variables:
              - name: c
                value:
                  - type: token
                    value:
                      type: number
                      value: 345
      loc:
        source_index: 0
        line: 2
        column: 1
      variables:
        - name: b
          value:
            - type: token
              value:
                type: number
                value: 123
variables:
  - name: a
    value:
      - type: token
        value:
          type: number
          value: 123
sources:
  - ""
sourceMapUrls:
  - ~
licenseComments: []

