tests/snapshots/test_variables__at_supports.snap
---
source: tests/test_variables.rs
expression: stylesheet
---
rules:
  - type: supports
    value:
      condition:
        type: declaration
        propertyId:
          property: display
        value: flex
      rules:
        - type: style
          value:
            selectors:
              - - type: class
                  name: flex-container
            declarations:
              importantDeclarations: []
              declarations:
                - property: display
                  value:
                    type: pair
                    outside: block
                    inside:
                      type: flex
                      vendorPrefix: []
                    isListItem: false
              variables: []
            rules: []
            loc:
              source_index: 0
              line: 4
              column: 3
            variables:
              - name: c
                value:
                  - type: token
                    value:
                      type: number
                      value: 123
      loc:
        source_index: 0
        line: 2
        column: 1
variables:
  - name: a
    value:
      - type: token
        value:
          type: number
          value: 123
sources:
  - ""
sourceMapUrls:
  - ~
licenseComments: []

